solc_ossfuzz_seed_corpus/test_sol/test_49eb35c3c3e2cb0019eff5025750816546e6d43732c27e05fab1a70678529e2d_eb01c53d800f4fb7d64778510edc283ffb968f1c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(function (address payable, bool) internal   returns (address payable) i0,address i1,bool[1] memory i2) external   
  {
  }
  event ev0();
  function f1(bytes26 i0) public    returns(function (address payable[1] memory, bytes31[] memory) external   returns (uint64, function (function (bytes16, function (int72) external   returns (uint152, function (bool, uint168, bytes31[1] memory) external   returns (int176))) internal   returns (bytes7, bytes25, int72), bytes memory) internal   returns (bytes29), string memory) o0)
  {
  }
  function f2(string memory i0,int64 i1,uint208 i2) internal    returns(uint72 o0,int80 o1,int32 o2)
  {
  }
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su0.sol:27-99): Internal type is not allowed for public or external functions.
